<resources>
    <string name="btn_ac">AC</string>
    <string name="btn_back">back</string>
    <string name="btn_division">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiply">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_2nd">2nd</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_rad">rad</string>
    <string name="btn_sqrt">sqrt</string>
    <string name="btn_parenthesis_l">(</string>
    <string name="btn_parenthesis_r">)</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_ln">ln</string>
    <string name="btn_lg">lg</string>
    <string name="btn_log">log</string>
    <string name="btn_powerMinOne">1/x</string>
    <string name="btn_expPowX">e^x</string>
    <string name="btn_square">x^2</string>
    <string name="btn_power">x^y</string>
    <string name="btn_module">|x|</string>
    <string name="btn_pi">pi</string>
    <string name="btn_exp">e</string>

    <string name="_0">0</string>
</resources>